_sass/minima/_base.scss
/**
 * Reset some basic elements
 */
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
  margin: 0;
  padding: 0;
}



/**
 * Basic styling
 */
body {
  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
  color: $text-color;
  background-color: $background-color;
  -webkit-text-size-adjust: 100%;
  -webkit-font-feature-settings: "kern" 1;
     -moz-font-feature-settings: "kern" 1;
       -o-font-feature-settings: "kern" 1;
          font-feature-settings: "kern" 1;
  font-kerning: normal;
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}



/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
%vertical-rhythm {
  margin-bottom: $spacing-unit / 2;
}



/**
 * `main` element
 */
main {
  display: block; /* Default value of `display` of `main` element is 'inline' in IE 11. */
}



/**
 * Images
 */
img {
  max-width: 100%;
  vertical-align: middle;
}



/**
 * Figures
 */
figure > img {
  display: block;
}

figcaption {
  font-size: $small-font-size;
}



/**
 * Lists
 */
ul, ol {
  margin-left: $spacing-unit;
}

li {
  > ul,
  > ol {
    margin-bottom: 0;
  }
}



/**
 * Headings
 */
h1, h2, h3, h4, h5, h6 {
  font-weight: $base-font-weight;
}



/**
 * Links
 */
a {
  color: $brand-color;
  text-decoration: none;

  &:visited {
    color: darken($text-color, 15%);
  }

  &:hover {
    color: $text-color;
    text-decoration: underline;
  }

  .social-media-list &:hover {
    text-decoration: none;

    .username {
      text-decoration: underline;
    }
  }
}


/**
 * Blockquotes
 */
blockquote {
  color: $grey-color;
  border-left: 4px solid $grey-color-light;
  padding-left: $spacing-unit / 2;
  @include relative-font-size(1.125);
  letter-spacing: -1px;
  font-style: italic;

  > :last-child {
    margin-bottom: 0;
  }
}



/**
 * Code formatting
 */
pre,
code {
  @include relative-font-size(0.9375);
  border: 1px solid $grey-color-light;
  border-radius: 3px;
  background-color: #eef;
}

code {
  padding: 1px 5px;
}

pre {
  padding: 8px 12px;
  overflow-x: auto;

  > code {
    border: 0;
    padding-right: 0;
    padding-left: 0;
  }
}



/**
 * Wrapper
 */
.wrapper {
  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
  margin-right: auto;
  margin-left: auto;
  padding-right: $spacing-unit;
  padding-left: $spacing-unit;
  @extend %clearfix;

  @include media-query($on-laptop) {
    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
    max-width:         calc(#{$content-width} - (#{$spacing-unit}));
    padding-right: $spacing-unit / 2;
    padding-left: $spacing-unit / 2;
  }
}

.bigger-wrapper {
  max-width: -webkit-calc(#{$bigger-content-width});
  max-width:         calc(#{$bigger-content-width});
  margin-right: auto;
  margin-left: auto;
  padding-right: $spacing-unit;
  padding-left: $spacing-unit;
  @extend %clearfix;

  @include media-query($on-laptop) {
    max-width: -webkit-calc(#{$bigger-content-width});
    max-width:         calc(#{$bigger-content-width});
    padding-right: $spacing-unit / 2;
    padding-left: $spacing-unit / 2;
  }
}




/**
 * Clearfix
 */
%clearfix:after {
  content: "";
  display: table;
  clear: both;
}



/**
 * Icons
 */

.svg-icon {
    width: 18px;
    height: 18px;
    display: inline-block;
    fill: #{$grey-color};
    padding-right: 5px;
    vertical-align: text-top;
}

.social-media-list {
  li + li {
    padding-top: 5px;
  }
}

/**
 * Tables
 */
table {
  margin-bottom: $spacing-unit;
  width: 100%;
  text-align: $table-text-align;
  color: lighten($text-color, 18%);
  border-collapse: collapse;
  border: 1px solid $grey-color-light;
  tr {
    &:nth-child(even) {
      background-color: darken($grey-color-light, 25%);
    }
  }
  th, td {
    padding: ($spacing-unit / 3) ($spacing-unit / 2);
  }
  th {
    background-color: lighten($grey-color-light, 3%);
    border: 1px solid darken($grey-color-light, 4%);
    border-bottom-color: darken($grey-color-light, 12%);
  }
  td {
    border: 1px solid $grey-color-light;
  }
}

/**
 * Terminal (borrowed from: https://codeeverywhere.ca/post.php?id=10)
 */

 .terminal {
     border-radius: 5px 5px 0 0;
     position: relative;
 }
 .terminal .top {
     background: #E8E6E8;
     color: black;
     padding: 5px;
     border-radius: 5px 5px 0 0;
 }
 .terminal .icons {
     position: absolute;
     top: 7px;
     left: 5px;
     position: absolute;
     display: flex;
 }

 .title{
     text-align: center;
 }

 .clear{clear: both;}
 .terminal .body {
     background: black;
     color: #7AFB4C;
     padding: 8px;
     overflow: auto;
     height: 100%;
 }
 .space {
     margin: 25px;
 }
 .shadow { box-shadow: 0px 0px 10px rgba(0,0,0,.4)}

 /**
 * Terminal icons, borrowed from https://codepen.io/dev_loop/pen/rRrroJ
 */

.terminal-icon {
  width: 20px;
  height: 20px;
  display: inline-block;
  border-radius: 15px;
  margin-left: 2px;
  border-width: 1px;
  border-style: solid;
}
.minimize {
	background: #fac536;
	position: relative;
	overflow: hidden;
}
.minimize::before{
	content: '';
	position: absolute;
	top: 100%;
	left: 50%;
	transform: translate(-50%, -50%);
	width: 50%;
	height: 10%;
	opacity: 0;
	background: #222;
	transition: 300ms;
}
.minimize:hover::before{
	opacity: 1;
	top: 50%;
}
.maximize{
	background: #39ea49;
	position: relative;
	overflow: hidden;
}
.maximize::before{
	content: '';
	position: absolute;
	top: 100%;
	left: 50%;
	transform: translate(-50%, -50%);
	width: 45%;
	height: 45%;
	opacity: 0;
	background: #222;
	transition: 300ms;
}
.maximize::after{
	content: '';
	position: absolute;
	top: 80%;
	left: 50%;
	transform: translate(-50%, -50%) rotate(-45deg);
	width: 15%;
	height: 80%;
	opacity: 0;
	background: #39ea49;
	transition: 300ms;
}
.maximize:hover::before, .maximize:hover::after{
	opacity: 1;
	top: 50%;
}
.close {
	background: #f25056;
	position: relative;
	overflow: hidden;
}
.close::before{
	content: '';
	position: absolute;
	top: 100%;
	left: 50%;
	transform: translate(-50%, -50%) rotate(-45deg);
	width: 15%;
	height: 50%;
	opacity: 0;
	background: #222;
	transition: 300ms;
}
.close::after{
	content: '';
	position: absolute;
	top: 100%;
	left: 50%;
	transform: translate(-50%, -50%) rotate(45deg);
	width: 15%;
	opacity: 0;
	height: 50%;
	background: #222;
	transition: 300ms;
}
.close:hover::before, .close:hover::after{
	opacity: 1;
	top: 50%;
}

